<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="order">Order</string>
    <string name="thank_you">Thank you!</string>
    <string name="initial_quantity">1</string>
    <string name="falseText">No</string>
    <string name="trueText">Yes</string>

    <!--
      Name for the order summary. It will be shown in the format of "Name: Amy" where Amy is the
      user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy"></xliff:g>%s</string>

    <!--
         Whipped cream topping for the order summary. It will be shown in the format of
         "Add whipped cream? true" or "Add whipped cream? false". [CHAR LIMIT=NONE]
       -->
    <string name="order_whipped_cream">Add whipped cream? <xliff:g id="hasWhippedCream" example="true">%s</xliff:g></string>

    <!--
         Chocolate topping for the order summary. It will be shown in the format of
         "Add chocolate? true" or "Add chocolate? false". [CHAR LIMIT=NONE]
       -->
    <string name="order_chocolate">Add chocolate? <xliff:g id="hasChocolate" example="true">%s</xliff:g></string>

    <!--
      Quantity of coffee cups for the order summary. It will be shown in the format of
      "Quantity: 2", where 2 is the number of cups ordered. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_quantity">Quantity: <xliff:g id="price" example="10">%d</xliff:g></string>

    <!--
          Total price for the order summary. It will be shown in the format of
          "Total: $10" where $10 is the price. [CHAR LIMIT=NONE]
        -->
    <string name="order_summary_total">Total: $ <xliff:g id="price" example="10">%d</xliff:g></string>

    <!--
      Subject line for the order summary email. It will be in the format of
      "Just Java order for Amy" where Amy is the user's name. [CHAR LIMIT=NONE]
    -->
    <string name="order_summary_email_subject">JustJava order coffee for <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <!--
      Toast comment for minimal order.
    -->
    <string name="toast_min_order">You cannot order less than 1 coffee.</string>
    <!--
      Toast comment for maximum of order.
    -->
    <string name="toast_max_order">You cannot order more than 100 coffee.</string>
</resources>
